# NetworkPOC

./: CMakeLists.txt  LICENSE.md  README.md  client.c  qtserver.cpp  server.c  server_qt.cpp  test.h
